--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -3,3 +3,11 @@
 <p><%= @restaurant.phone_number %></p>
 
 <%= link_to 'Go back to all restaurants', restaurants_path %>
+<%= link_to 'Leave a review', new_restaurant_review_path(@restaurant) %>
+
+<ul class="list-group">
+  <% @restaurant.reviews.each do |review| %>
+    <li class="list-group-item"><%= review.rating %></li>
+    <p> <%= review.content %> </p>
+  <% end %>
+</ul>
